--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,11 @@
 
         <title> Image Colour Palette Generator </title>
 
+        <!--        Favicon     -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/static/assets/favicon/site.webmanifest">
 
         <!--   Google Fonts     -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
