--- a/templates/header.html
+++ b/templates/header.html
@@ -6,13 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Image color extractor.">
 
-        <title> Image Colour Palette Generator </title>
+        <title> Image Color Palette Generator </title>
 
         <!--        Favicon     -->
         <link rel="apple-touch-icon" sizes="180x180" href="/static/assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/favicon/favicon-16x16.png">
         <link rel="manifest" href="/static/assets/favicon/site.webmanifest">
+        <link rel="mask-icon" href="/static/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#38b6ff">
 
         <!--   Google Fonts     -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,5 +23,26 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 
         <!--   Custom Stylesheet     -->
-        <link rel="stylesheet" href="/static/styles/style.css">
+        <link rel="stylesheet" href="/static/styles/scss/style.css">
     </head>
+
+    <div class="container-fluid">
+        <header>
+            <div class="header-wrapper rel-position">
+                <h1 onclick="window.location.href='{{ url_for('home_blueprint.home') }}'" tabindex="0">Color Extractor</h1>
+                {% if current_user: %}
+                    <div class="user-details text-white">
+                        {{ current_user }}
+                    </div>
+                {% else: %}
+                    <div class="user-actions-container">
+                        <a href="{{ url_for('authentication_blueprint.authenticate', auth_type='login') }}" class="btn btn-custom-outline">
+                            <p>Login</p>
+                        </a>
+                        <a href="{{ url_for('authentication_blueprint.authenticate', auth_type='register') }}" class="btn btn-custom-outline">
+                            <p>Register</p>
+                        </a>
+                    </div>
+                {% endif %}
+            </div>
+        </header>
