--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -11,4 +11,5 @@
     --backgroundBlur: rgba(0, 0, 0, .5);
     --backgroundBlur-2: rgba(0, 0, 0, 0.05);
     --textBlurBg: rgba(0, 0, 0, 1);
+    --box-shadow-color: rgba(0, 0, 0, 0.22);
 }
