--- a/static/styles/scss/style.css
+++ b/static/styles/scss/style.css
@@ -21,6 +21,7 @@
   --backgroundBlur: rgba(0, 0, 0, .5);
   --backgroundBlur-2: rgba(0, 0, 0, 0.05);
   --textBlurBg: rgba(0, 0, 0, 1);
+  --box-shadow-color: rgba(0, 0, 0, 0.22);
 }
 
 .container-fluid {
@@ -29,6 +30,13 @@
 
 .absolute-position {
   position: absolute;
+}
+
+.absolute-vert-center {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .blue-color {
@@ -627,5 +635,57 @@ header .header-wrapper .user-actions-container a:first-child {
   .about-container {
     margin: 275% auto 70%;
   }
+}
+
+.user-profile-page-container {
+  padding: 1% 7%;
+}
+
+.user-profile-page-container h1 {
+  font-size: 3rem;
+}
+
+.user-profile-page-container h2 {
+  font-size: 2rem;
+}
+
+.user-profile-page-container .user-saved-colors-container {
+  width: 100%;
+  height: 10rem;
+  margin: 3% 0 5%;
+  position: relative;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.user-profile-page-container .user-saved-colors-container .saved-color {
+  width: 10rem;
+  height: 100%;
+  border-radius: 8px;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 10px var(--box-shadow-color);
+          box-shadow: 0px 0px 10px var(--box-shadow-color);
+  display: inline-block;
+  margin-right: 0.5%;
+}
+
+.user-profile-page-container .user-saved-colors-container .saved-color:hover, .user-profile-page-container .user-saved-colors-container .saved-color:focus {
+  -webkit-filter: opacity(0.5);
+          filter: opacity(0.5);
+  -webkit-transition: 0.35s ease-in-out;
+  transition: 0.35s ease-in-out;
+}
+
+.user-profile-page-container .user-saved-colors-container::-webkit-scrollbar {
+  display: none;
+}
+
+.user-profile-page-container .canvas-chart-container {
+  display: inline-block;
+  width: 24rem;
+  max-width: 25rem;
 }
 /*# sourceMappingURL=style.css.map */
