--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,11 @@
 {% block content %}
 
+<!-- Chart CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js" integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <!-- Custom js file -->
 <script src="/static/js/script.js" type="module"></script>
 <script src="/static/js/custom.js" type="module"></script>
+<script src="/static/js/chart.js" type="module"></script>
 
 {% endblock %}
