--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -8,6 +8,8 @@
     --deep-red: #852b3a;
     --light-red: #ffdde2;
     --pale-red: #ffcfd7;
+    --light-green-color: #d3f6b5;
+    --deep-green-color: #0f580a;
     --backgroundBlur: rgba(0, 0, 0, .5);
     --backgroundBlur-2: rgba(0, 0, 0, 0.05);
     --textBlurBg: rgba(0, 0, 0, 1);
