--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
 <!-- Custom js file -->
 <script src="/static/js/script.js" type="module"></script>
 <script src="/static/js/custom.js" type="module"></script>
+<script src="/static/js/userPage.js" type="module"></script>
 <script src="/static/js/chart.js" type="module"></script>
 
 {% endblock %}
