--- a/static/styles/scss/_common.scss
+++ b/static/styles/scss/_common.scss
@@ -1,5 +1,6 @@
 .container-fluid{
     height: 100%;
+    overflow-x: hidden;
 }
 
 .absolute-position{
@@ -49,6 +50,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    animation: slideIn 0.35s ease-in-out;
 
     .error-message{
         color: var(--black);
@@ -91,5 +93,13 @@
     .error-div{
         width: 96%;
         padding: 4% 2% 2%;
+    }
+}
+
+@keyframes slideIn {
+    0%{
+        transform: translate(-50%, -50%);
+    }100%{
+        transform: translateY(0%, 0%);
     }
 }
