Update link to css

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 
         <!--   Custom Stylesheet     -->
-        <link rel="stylesheet" href="/static/styles/scss/style.css">
+        <link rel="stylesheet" href="/static/styles/css/style.min.css">
     </head>
 
     <div class="container-fluid">
